--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,17 @@
 @font-face {
 	font-family: "PokemonGB";
-	src: url("/fonts/PokemonGB.eot");
-	src: url("/fonts/PokemonGB.eot?#iefix") format("embedded-opentype"), 
-	url("/fonts/PokemonGB.otf") format("opentype"),
-	url("/fonts/PokemonGB.svg") format("svg"), 
-	url("/fonts/PokemonGB.ttf") format("truetype"), 
+	src: url("/fonts/PokemonGB.eot") format("eot");
+	src: url("/fonts/PokemonGB.ttf") format("truetype"), 
 	url("/fonts/PokemonGB.woff") format("woff"), 
 	url("/fonts/PokemonGB.woff2") format("woff2"); 
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: "Open Sans";
+	src: url("/fonts/OpenSans-Regular.woff2?v=1.101") format("woff2"), 
+	     url("/fonts/OpenSans-Regular.woff?v=1.101") format("woff"),
+	     url("/fonts/OpenSans-Regular.eot?v=1.101") format("eot");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -22,6 +27,7 @@
 ::-webkit-scrollbar, ::-webkit-scrollbar-thumb {
 	background-color: #DDD;
 }
+#chat::-webkit-scrollbar { width: 0 !important }
 
 html, body, header, main, footer, div, i, ul, li, select, input {
 	transition: background-color 200ms linear;
@@ -77,10 +83,6 @@ header, #window > div:first-child {
 	background: linear-gradient(to bottom, #EEE 0%, #FFF 100%);
 }
 
-footer {
-	background: linear-gradient(to bottom, #FFF 0%, #EEE 100%);
-}
-
 header {
 	padding-right: 200px;
 }
@@ -108,6 +110,14 @@ header > div > img {
 @keyframes opacityin {
 	0% { opacity: 0; }
 	100% { opacity: 1; }
+}
+
+footer {
+	background: linear-gradient(to bottom, #FFF 0%, #EEE 100%);
+}
+
+footer > div > .icon:nth-of-type(3):hover > img:first-of-type {
+	display: none;
 }
 
 footer > div {
@@ -214,6 +224,7 @@ main {
 
 #chat > div > :first-child {
 	margin: 0 10px;
+	text-align: center;
 }
 
 #chat > div > div:first-child {
@@ -289,6 +300,7 @@ ul > li {
 	display: flex;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
+	cursor: pointer;
 }
 
 ul > li > i {
@@ -324,6 +336,7 @@ ul > li > div {
 	width: 400px;
 	font-size: 11px;
 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35px, #f9f9f9 35px, #f9f9f9 100%);
+	display: none!important;
 }
 
 ul > li > div > div:first-child {
@@ -928,8 +941,8 @@ select {
 
 .icon { 
 	display: inline-block; 
-	width: 49px; 
-	height: 49px; 
+	width: 50px; 
+	height: 50px; 
 	margin: 0; 
 	padding: 0; 
 	border: 0;
@@ -937,10 +950,10 @@ select {
 }
 .icon img { 
 	margin: 8px; 
-	transition: 0.3s;
+	transition: 0.1s;
 }
-.icon img:hover {
-	margin: 6px;
+.icon:hover img {
+    transform: scale(1.15);
 }				
 .tooltiptext {
   font-family: "PokemonGB";
@@ -953,7 +966,7 @@ select {
   height: 10px;					  
   /* Position du tooltip */
   position: absolute;
-  bottom: 70px;
+  bottom: 80px;
   right: 0;
   text-align: left;
   z-index: 1;
@@ -976,14 +989,14 @@ select {
 /***** bibw *****/ 
 
 body.bibw {
-  background : -moz-linear-gradient(50% 1.37% -90deg,rgba(80, 81, 81, 1) 0%,rgba(72, 73, 73, 1) 1.44%,rgba(51, 52, 52, 1) 6.36%,rgba(38, 38, 38, 1) 11.11%,rgba(34, 34, 34, 1) 15.48%,rgba(34, 34, 34, 1) 100%);
-  background : -webkit-linear-gradient(-90deg, rgba(80, 81, 81, 1) 0%, rgba(72, 73, 73, 1) 1.44%, rgba(51, 52, 52, 1) 6.36%, rgba(38, 38, 38, 1) 11.11%, rgba(34, 34, 34, 1) 15.48%, rgba(34, 34, 34, 1) 100%);
-  background : -webkit-gradient(linear,50% 1.37% ,50% 100% ,color-stop(0,rgba(80, 81, 81, 1) ),color-stop(0.0144,rgba(72, 73, 73, 1) ),color-stop(0.0636,rgba(51, 52, 52, 1) ),color-stop(0.1111,rgba(38, 38, 38, 1) ),color-stop(0.1548,rgba(34, 34, 34, 1) ),color-stop(1,rgba(34, 34, 34, 1) ));
-  background : -o-linear-gradient(-90deg, rgba(80, 81, 81, 1) 0%, rgba(72, 73, 73, 1) 1.44%, rgba(51, 52, 52, 1) 6.36%, rgba(38, 38, 38, 1) 11.11%, rgba(34, 34, 34, 1) 15.48%, rgba(34, 34, 34, 1) 100%);
-  background : -ms-linear-gradient(-90deg, rgba(80, 81, 81, 1) 0%, rgba(72, 73, 73, 1) 1.44%, rgba(51, 52, 52, 1) 6.36%, rgba(38, 38, 38, 1) 11.11%, rgba(34, 34, 34, 1) 15.48%, rgba(34, 34, 34, 1) 100%);
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#505151', endColorstr='#222222' ,GradientType=0)";
-  background : linear-gradient(180deg, rgba(80, 81, 81, 1) 0%, rgba(72, 73, 73, 1) 1.44%, rgba(51, 52, 52, 1) 6.36%, rgba(38, 38, 38, 1) 11.11%, rgba(34, 34, 34, 1) 15.48%, rgba(34, 34, 34, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#505151',endColorstr='#222222' , GradientType=0);
+  background : -moz-linear-gradient(0% 50% 0deg,rgba(42, 82, 152, 1) 0%,rgba(42, 82, 152, 1) 0.36%,rgba(35, 70, 131, 1) 34.53%,rgba(31, 62, 118, 1) 68.07%,rgba(30, 60, 114, 1) 100%);
+  background : -webkit-linear-gradient(0deg, rgba(42, 82, 152, 1) 0%, rgba(42, 82, 152, 1) 0.36%, rgba(35, 70, 131, 1) 34.53%, rgba(31, 62, 118, 1) 68.07%, rgba(30, 60, 114, 1) 100%);
+  background : -webkit-gradient(linear,0% 50% ,100% 50% ,color-stop(0,rgba(42, 82, 152, 1) ),color-stop(0.0036,rgba(42, 82, 152, 1) ),color-stop(0.3453,rgba(35, 70, 131, 1) ),color-stop(0.6807,rgba(31, 62, 118, 1) ),color-stop(1,rgba(30, 60, 114, 1) ));
+  background : -o-linear-gradient(0deg, rgba(42, 82, 152, 1) 0%, rgba(42, 82, 152, 1) 0.36%, rgba(35, 70, 131, 1) 34.53%, rgba(31, 62, 118, 1) 68.07%, rgba(30, 60, 114, 1) 100%);
+  background : -ms-linear-gradient(0deg, rgba(42, 82, 152, 1) 0%, rgba(42, 82, 152, 1) 0.36%, rgba(35, 70, 131, 1) 34.53%, rgba(31, 62, 118, 1) 68.07%, rgba(30, 60, 114, 1) 100%);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#2A5298', endColorstr='#1E3C72' ,GradientType=0)";
+  background : linear-gradient(90deg, rgba(42, 82, 152, 1) 0%, rgba(42, 82, 152, 1) 0.36%, rgba(35, 70, 131, 1) 34.53%, rgba(31, 62, 118, 1) 68.07%, rgba(30, 60, 114, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2A5298',endColorstr='#1E3C72' , GradientType=1);
 }
 
 .bibw #chat > div > :nth-child(2) > div:not(:first-child), .bibw ul > li > div > div {
@@ -1001,10 +1014,12 @@ body.bibw {
 
 .bibw ul > li > i, .bibw select, .bibw footer > div > i {
 	color: #DDD;
+	margin-right: 5px;
 }
 
 .bibw #close, .bibw #chat > div > div:first-child, .bibw ul > li > div > div:first-child > div {
-	background-color: #494949;
+	background: none !important;
+	border: none;
 }
 
 .bibw main, .bibw #window > div:first-child, .bibw footer > div, .bibw footer > div > i, .bibw ul, .bibw #close, .bibw #window, .bibw ul > li > div > div:last-child {
@@ -1016,12 +1031,12 @@ body.bibw {
     background: none!important;
     position: absolute;
     width: 100%;
+    padding-top: 15px;
 }
 
 .bibw footer {
 	background: none !important;
-	margin-bottom: 15px;
-    margin-left: 10px;
+	margin-bottom: 20px;
     margin-right: 0;
 }
 
@@ -1035,32 +1050,35 @@ body.bibw {
 }
 
 .bibw ::-webkit-scrollbar-track {
-	background-color: #222;
+	background-color: rgba(0,0,0,0); display: none;
 }
 
 .bibw ::-webkit-scrollbar, .bibw ::-webkit-scrollbar-thumb {
-	background-color: #333;
+    background-color: rgba(0,0,0,0);
+    color: white;
 }
 
 .bibw ::-webkit-scrollbar-track, .bibw ::-webkit-scrollbar, .bibw ::-webkit-scrollbar-thumb {
 	border-color: #222;
+	border: 0;
 }
 
 .bibw > footer#foot > input { 
 	background: #0C0C0C; 
 	border-radius: 50px; 
-	font-family: 'Pokemon GB';    
+	font-family: "PokemonGB";    
 	font-size: 22px!important;
 	line-height: 50px;
 	margin-right: 10px;
-    margin-left: 10px; 
+    margin-left: 25px;
     padding: 5px 25px;
 }
 
 .bibw #chat > div > div:last-child {
-	color: #505151!important;
+	color: #9AD5D8!important;
+	opacity: .33;
     font-size: 10px;
-    padding-right: 15px;
+    padding-right: 17px;
 }	
 .bibw footer > div {
 	margin-right: 20px;
@@ -1068,13 +1086,22 @@ body.bibw {
 
 .bibw #chat > div > div:first-child > img:nth-child(1)/*, .bibw #chat > div > div:first-child > img:nth-child(2), .bibw #chat > div > div:first-child > img:nth-child(3) */{
 	display: block;
+	width: 100%;
+	height: 100%;
+	top: -10px;
+    image-rendering: crisp-edges;
+    margin-left: -2px;
+}
+.bibw #chat > div > div > div {
+	padding: 4px;
 }
 
 .bibw #chat > div > :first-child {
-    width: 40px;
-    max-width: 40px;
-    max-height: 40px;
+    width: 50px;
+    max-width: 50px;
+    max-height: 50px;
     margin-left: 25px;
+    text-align: center;
 }
 
 .bibw footer > div > .icon {
@@ -1082,7 +1109,7 @@ body.bibw {
 }
 
 .bibw footer > div > .icon:hover {
-	background-color: #505151;
+	background-color: #9AD5D8;
 }
 .bibw #overlay > #cover {
 	background: rgba(0, 0, 0, .66);
@@ -1091,4 +1118,32 @@ body.bibw {
 .pokeball {
 	width: 17px;
 	height: 17px;
+}
+.sword {
+	width: 25px;
+	height: 25px;
+	right: 200px;
+	position: absolute;
+	padding-top: 7px;
+	display: none;
+	z-index: 999;
+}
+
+ul > li:hover > .sword {
+	display: block;
+}
+.bibw main #chat div > a {
+	color: #1AC;
+}
+
+.bibw >  #main > #chat > .part > div > div {
+	color: #9AD5D8!important;
+}
+.bibw >  #main > #chat > div:first-of-type {
+    padding-top: 120px;
+}
+
+.bibw > main {
+	font-family: "Open Sans";
+	font-size: 17px;
 }
