--- a/static/style.css
+++ b/static/style.css
@@ -952,7 +952,7 @@ select {
 	margin: 8px; 
 	transition: 0.1s;
 }
-.icon:hover img {
+.icon:hover > img {
     transform: scale(1.15);
 }				
 .tooltiptext {
@@ -1146,4 +1146,49 @@ ul > li:hover > .sword {
 .bibw > main {
 	font-family: "Open Sans";
 	font-size: 17px;
+}
+
+#inventory_display {
+    position: absolute;
+    bottom: 100px;
+    right: 0;
+    opacity: 0;
+    background-color: black;
+    vertical-align: middle;
+    color: #fff;
+    text-align: center;
+    border-radius: 15px;
+    min-width: 200px;
+    padding: 15px;
+    margin-right: 150px;
+    z-index: 2;
+}
+
+#chest:hover > #inventory_display {
+    opacity: 1;
+}
+
+#inventory_display::after {
+  content: " ";
+  position: absolute;
+  top: 100%; /* At the bottom of the tooltip */
+  left: 75%;
+  margin-left: -10px;
+  border-width: 15px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.item {
+    position: relative;
+    vertical-align: middle;
+    clear: right;
+}
+
+.item img {
+    width: 30px;
+    vertical-align: middle;
+    display: inline-block;
+    transition: none;
+    transform: none;
 }
