--- a/static/style.css
+++ b/static/style.css
@@ -1191,18 +1191,19 @@ ul > li > span:hover + .sword {
 }
 
 #inventory_display {
+    visibility: hidden;
     position: absolute;
-    top: 0;
     opacity: 0;
     background: black;
+    transition: 300ms linear;
     vertical-align: middle;
     color: #fff;
     text-align: center;
     border-radius: 30px;
     min-width: 200px;
-    padding: 20px 10px 10px 20px;
+    padding: 10px;
     margin: 20px 150px 20px -1px;
-    z-index: 2;
+    z-index: 5;
 }
 
 #chest:hover > #inventory_display {
@@ -1223,6 +1224,7 @@ ul > li > span:hover + .sword {
 }
 
 .item {
+    pointer-events:none; /* cosmetic placeholder, the blinking bug will have to be fixed */
     position: relative;
     display: inline-block;
     margin: 10px 10px 30px 10px;
@@ -1237,4 +1239,9 @@ ul > li > span:hover + .sword {
     display: inline-block;
     transition: none;
     transform: none;
+}
+
+.item a {
+    text-decoration:none;
+    color: #fff;
 }
