(some) items can be activated through the menu
Former-commit-id: cd01ceab63c5a47e9bf9f3d0249133e8993cd8b7

--- a/static/style.css
+++ b/static/style.css
@@ -598,7 +598,7 @@ select {
 #close {
 	cursor: pointer;
 	text-align: center;
-	padding: 7px;
+	/* padding: 7px; */
 	background: #EEE;
 	border-left: 2px solid #BBB;
 }
