[WIP] bank displays in chat area. Items not yet clickable
Former-commit-id: c5ab0218974bba1ecbf7b4fb2ef5e08f4c23fe3b

--- a/static/style.css
+++ b/static/style.css
@@ -1306,3 +1306,10 @@ ul > li:hover .sword {
 .item > span {
     display: block;
 }
+
+.bank-item {
+    color: #fff;
+    font-family: 'Pokemon GB';
+    font-size: 16px;
+    letter-spacing: 5px;
+}
